--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 	<p>Es el día de esta ruta por Marruecos en 4×4 donde mayor cambio de paisajes vas a vivir, atravesando desiertos de todo tipo.</p>
 
-	<img src="Captura de pantalla de 2022-09-28 09-51-40.png">
+	<img src="imagennnn.png">
 
 	<h1>DÍA 6: Valle del Dra</h1>
 
